<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">基金小工具</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="fundstring">基金净值:</string>
    <string name="hit">000000</string>
   	<string name="title">基金代号:</string>
   	<string name="hit2">请填写...</string>
   	<string name="add">新增基金</string>
   	<string name="send">显示基金净值</string>
   	<string name="close">退出软件</string>
   	<string name="buyvalue">购买净值：</string>
    <string name="buyunit">数额：</string>
</resources>
