<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.renjj.fundvlaue.MainActivity">
    
    <LinearLayout
         android:layout_width="match_parent"
	     android:layout_height="0dp"
	     android:layout_weight="5"
	     android:orientation="vertical"
	     android:background="@drawable/beijin">
	      <TextView
	        android:layout_margin="10dp"
	        android:textColor="#ffffff"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/fundstring" />
	    <ListView 
	        android:id="@+id/listview"
	        android:layout_width="match_parent"
	     	android:layout_height="wrap_content"
	     	android:background="#E0FFFF"/>
	</LinearLayout>
	<LinearLayout
         android:layout_width="match_parent"
	     android:layout_height="0dp"
	     android:layout_weight="1"
	     android:orientation="horizontal">
	     <TextView
	        android:layout_margin="10dp"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/title" />

	     <EditText
	         android:id="@+id/addValue"
	         android:layout_width="85dp"
	         android:layout_height="wrap_content"
	         android:layout_margin="10dp"
	         android:maxLength="6"
	         android:digits="0123456789."
	         android:inputType="number"
	         android:text="160625" />

	     <Button
	        android:id="@+id/add"
	        android:layout_marginLeft="27dp"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:textSize="12sp"
	        android:text="@string/add"/>
     </LinearLayout>

     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_gravity="center"
         android:layout_weight="1"
         android:orientation="horizontal" >
	      <TextView
	        android:layout_marginLeft="10dp"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/buyvalue" />
	      
	       <EditText
	         android:id="@+id/buyvalue"
	         android:layout_width="85dp"
	         android:layout_height="wrap_content"
	         android:layout_marginLeft="10dp"
	         android:maxLength="6"
	         android:digits="0123456789."
	         android:inputType="numberDecimal"
	         android:text="0" />
	       
	        <TextView
	        android:layout_marginLeft="10dp"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/buyunit" />
	        
	        <EditText
	         android:id="@+id/buyunit"
	         android:layout_width="85dp"
	         android:layout_height="wrap_content"
	         android:maxLength="8"
	         android:digits="0123456789."
	         android:inputType="numberDecimal"
	         android:text="0" />
	      
	     <!-- <Button
	        android:id="@+id/send"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center"
	        android:text="@string/send"/>
	     --> 
     </LinearLayout>
</LinearLayout>
